# Runahead

./: .gitignore  LICENSE  README.md  commands.txt  glog
benchmarks/BLAS-3.10.0/: CMakeLists.txt  Makefile  make.inc
benchmarks/BLAS-3.10.0/TESTING/: CMakeLists.txt  Makefile  sblat1.f  sblat1.out
benchmarks/CBLAS/: Makefile.in
benchmarks/CBLAS/testing/: xccblat1  xccblat2  xccblat3  xdcblat1  xdcblat2  xdcblat3  xscblat1  xscblat2  xscblat3  xzcblat1  xzcblat2  xzcblat3
benchmarks/NPB3.4.2/NPB3.4-MPI/IS/: is.c
benchmarks/NPB3.4.2/NPB3.4-OMP/IS/: npbparams.h
benchmarks/NPB3.4.2/NPB3.4-OMP/sys/: setparams
benchmarks/cbench/: all_compile  all_run__1_dataset  bench_list
benchmarks/cbench/automotive_qsort1/src/: Makefile  a.out
benchmarks/cbench/consumer_lame/src/: id3tag.c
benchmarks/cbench/network_dijkstra/src/: Makefile
benchmarks/cgo2017/program/nas-cg/: npbparams.h
benchmarks/cgo2017/program/nas-is/: is.c
benchmarks/cgo2017/program/randacc/: randacc.c
benchmarks/hpcc/: README.haux  README.html  README.htoc  README.txt  hpcc
benchmarks/hpcc/hpl/: Make.Unix
benchmarks/hpcc/hpl/testing/ptimer/Unix/: Make.inc
gem5/: SConstruct  compare.sh  config.ini  config.json  debug_run.sh  parsetab.py  pre64.txt  run.sh  run_fast.sh  stats.txt
gem5/build_opts/: X86  X86_MESI_Two_Level  X86_MOESI_AMD_Base
gem5/configs/learning_gem5/part1/: simple.py  two_level.py
gem5/configs/learning_gem5/part2/: hello_goodbye.py  run_simple.py  simple_memobj.py
gem5/configs/runahead/: caches.py  o3_2level.py  setup.py
gem5/ebug-flags=RunaheadIQrelease/: config.ini  config.json  stats.txt
gem5/ext/mcpat/: arch_const.h
gem5/m5out/: config.dot  config.ini  config.json
gem5/m5out/baseline/: 2level_randacc
gem5/m5out/runahead/: 2level_randacc
gem5/src/arch/x86/insts/: static_inst.cc
gem5/src/arch/x86/linux/: syscall_tbl64.cc
gem5/src/base/: trace.hh
gem5/src/baseline/: MyObject.py  SConscript  caches.py  my_object.cc  my_object.hh  run_my.py  two_level.py
gem5/src/cpu/: SConscript  dyn_inst_parent.cc  dyn_inst_parent.hh  reg_class.hh
gem5/src/cpu/o3/: SConscript  commit.cc  cpu.cc  cpu.hh  decode.cc  dyn_inst.cc  dyn_inst.hh  fetch.cc  iew.cc  iew.hh  inst_queue.cc  inst_queue.hh  lsq.cc  lsq.hh  lsq_unit.cc  lsq_unit.hh  mem_dep_unit.hh  rename.cc  rename_map.cc  rob.cc  rob.hh
gem5/src/cpu/pre/: PreFUPool.py  PreO3CPU.py  PreO3Checker.py  SConscript  SConsopts  checker.cc  checker.hh  comm.hh  commit.cc  commit.hh  cpu.cc  cpu.hh  decode.cc  decode.hh  dep_graph.hh  dyn_inst.cc  dyn_inst.hh  dyn_inst_ptr.hh  fetch.cc  fetch.hh  free_list.cc  free_list.hh  fu_pool.cc  fu_pool.hh  iew.cc  iew.hh  inst_queue.cc  inst_queue.hh  limits.hh  lsq.cc  lsq.hh  lsq_unit.cc  lsq_unit.hh  mem_dep_unit.cc  mem_dep_unit.hh  regfile.cc  regfile.hh  rename.cc  rename.hh  rename_map.cc  (+11 more)
gem5/src/cpu/runaheado3/: RunaheadFUPool.py  RunaheadO3CPU.py  RunaheadO3Checker.py  SConscript  SConsopts  checker.cc  checker.hh  comm.hh  commit.cc  commit.hh  cpu.cc  cpu.hh  decode.cc  decode.hh  dep_graph.hh  dyn_inst.cc  dyn_inst.hh  dyn_inst_ptr.hh  fetch.cc  fetch.hh  free_list.cc  free_list.hh  fu_pool.cc  fu_pool.hh  iew.cc  iew.hh  inst_queue.cc  inst_queue.hh  limits.hh  lsq.cc  lsq.hh  lsq_unit.cc  lsq_unit.hh  mem_dep_unit.cc  mem_dep_unit.hh  regfile.cc  regfile.hh  rename.cc  rename.hh  rename_map.cc  (+11 more)
gem5/src/cpu/runaheado3/probe/: RunaheadElasticTrace.py  RunaheadSimpleTrace.py  SConscript  runahead_elastic_trace.cc  runahead_elastic_trace.hh  runahead_simple_trace.cc  runahead_simple_trace.hh
gem5/src/cpu/simple/: base.cc  exec_context.hh
gem5/src/learning_gem5/part2/: simple_memobj.hh
gem5/src/mem/: packet.hh  request.hh
gem5/src/mem/cache/: base.cc  base.hh  mshr.cc  mshr.hh  mshr_queue.cc
gem5/src/python/: importer.py
gem5/src/sim/: mem_state.cc
gem5/stats/: simple.csv  summarize_stats.py  targetStats.txt
parsing_data/: Gem5McPATParser.py  output.txt  parse.py  scp_data.sh  template_x86.xml
parsing_data/m5out_copy/: config.ini
parsing_data/m5out_copy/base/: rob192_10k_128kB  rob192_10k_128kB_config.json  rob192_500k_64kB  rob192_500k_64kB_config.json  rob192_525k_256kB  rob192_525k_256kB_config.json
parsing_data/m5out_copy/pre/: rob192_10k_128kB  rob192_10k_128kB_config.json  rob192_500k_64kB  rob192_500k_64kB_config.json  rob192_525k_256kB  rob192_525k_256kB_config.json
parsing_data/m5out_copy/run/: rob192_10k_128kB  rob192_10k_128kB_config.json  rob192_500k_64kB  rob192_500k_64kB_config.json  rob192_525k_256kB  rob192_525k_256kB_config.json
parsing_data/mcpat/: OOO.xml  array.cc  core.cc  main.cc  mcpat.mk  processor.cc
parsing_data/mcpat/.hg/: dirstate  undo.desc
parsing_data/mcpat/.hg/cache/: branchheads  tags
parsing_data/mcpat/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
parsing_data/mcpat/.hg/store/data/: _r_e_a_d_m_e.i  _x_m_l___parse.cc.i  _x_m_l___parse.h.i  array.cc.i  basic__components.h.i  core.cc.i  version.h.i
parsing_data/mcpat/.hg/store/data/_example_results/: _a_r_m___a9__2_g_hz.i  _a_r_m___a9__2_g_hz__with_i_o_c.i  _alpha21364.i  _penryn.i  _t1.i  _t1___d_c__64.i  _t1___s_b_t__64.i  _t1___s_t__64.i  _t2.i  _xeon.i
parsing_data/mcpat/.hg/store/data/_processor_description_files/: _a_r_m___a9__2_g_hz.xml.i  _a_r_m___a9__2_g_hz__with_i_o_c.xml.i  (+3 more)
parsing_data/mcpat/cacti/: Ucache.cc
parsing_data/mcpat/obj_opt/: mcpat
parsing_data/mcpat_in/: base_rob192_10k_128kB.xml  base_rob192_500k_64kB.xml  base_rob192_525k_256kB.xml  pre_rob192_10k_128kB.xml  pre_rob192_500k_64kB.xml  pre_rob192_525k_256kB.xml  run_rob192_10k_128kB.xml  run_rob192_500k_64kB.xml  run_rob192_525k_256kB.xml
parsing_data/mcpat_out/: base_rob192_10k_128kB.txt  base_rob192_500k_64kB.txt  base_rob192_525k_256kB.txt  pre_rob192_10k_128kB.txt  pre_rob192_500k_64kB.txt  pre_rob192_525k_256kB.txt  run_rob192_10k_128kB.txt  run_rob192_500k_64kB.txt  run_rob192_525k_256kB.txt
plotting_stats/: ParserMcParser.ipynb  plotting.ipynb  simple.csv
plotting_stats/.ipynb_checkpoints/: ParserMcParser-checkpoint.ipynb  plotting-checkpoint.ipynb
(+2 files in other folders)
